--- a/s4/B171836/Makefile
+++ b/s4/B171836/Makefile
@@ -5,6 +5,6 @@ all:
 	javac TestCase.java -classpath "../.."
 run:
 #	java -classpath "../.." s4.B171836/Hello
-#	java -classpath "../.." s4.B171836/Frequencer
+	java -classpath "../.." s4.B171836/Frequencer
 #	java -classpath "../.." s4.B171836/InformationEstimator
-	java -classpath "../.." s4.B171836/TestCase
+#	java -classpath "../.." s4.B171836/TestCase
