--- a/s4/B171836/Makefile
+++ b/s4/B171836/Makefile
@@ -3,8 +3,10 @@ all:
 	javac -encoding UTF-8 Frequencer.java -classpath "../.."
 	javac -encoding UTF-8 InformationEstimator.java -classpath "../.."
 	javac -encoding UTF-8 TestCase.java -classpath "../.."
+	javac -encoding UTF-8 FinalTest.java -classpath "../.."
 run:
 #	java -classpath "../.." s4.B171836/Hello
 #	java -classpath "../.." s4.B171836/Frequencer
-	java -classpath "../.." s4.B171836/InformationEstimator
+#	java -classpath "../.." s4.B171836/InformationEstimator
 #	java -classpath "../.." s4.B171836/TestCase
+	java -classpath "../.." s4.B171836/FinalTest
